--- a/cart/src/app/app.component.html
+++ b/cart/src/app/app.component.html
@@ -326,7 +326,7 @@
 </div>
 
 <div class="content" role="main">
-
+  <app-customer></app-customer>
   <!-- Highlight Card -->
   <div class="card highlight-card card-small">
 
@@ -341,7 +341,10 @@
       </g>
     </svg>
 
-    <span>{{ title }} app is running!</span>
+    
+
+    <span>app is running!</span>
+   
 
     <svg id="rocket-smoke" xmlns="http://www.w3.org/2000/svg" width="516.119" height="1083.632" viewBox="0 0 516.119 1083.632">
       <title>Rocket Ship Smoke</title>
