--- a/cart/src/app/component/customer/customer.component.html
+++ b/cart/src/app/component/customer/customer.component.html
@@ -1,8 +1,9 @@
-<div class="">
-    <div *ngFor="let customer of (customers$ |async)"
-    >
-        <p>{{customer.name}}</p>
-        
+<div >
+    <div class="customerbox" *ngFor="let customer of (customers$ |async)"   >
+        <h1>{{customer.name}}</h1>
+        <p>{{customer.addressLine1}}</p>
+        <p>{{customer.city}}</p>
+        <p>{{customer.state}}</p>
     </div>
 
 </div>
