--- a/cart/src/app/component/customer/customer.component.html
+++ b/cart/src/app/component/customer/customer.component.html
@@ -16,6 +16,8 @@
         <p>{{customer.addressLine1}}</p>
         <p>{{customer.city}}</p>
         <p>{{customer.state}}</p>
+
+        <button class="buttonStyle" (click)="onViewDetail()"> View Detail</button>
     </div>
 
 </div>
