--- a/cart/src/app/app.component.html
+++ b/cart/src/app/app.component.html
@@ -326,7 +326,9 @@
 </div>
 
 <div class="content" role="main">
-  <app-customer></app-customer>
+  <button > View Customer</button>
+  <app-customer ></app-customer>
+
   <!-- Highlight Card -->
   <div class="card highlight-card card-small">
 
