--- a/cart/src/app/component/customer/customer.component.html
+++ b/cart/src/app/component/customer/customer.component.html
@@ -18,6 +18,7 @@
         <p>{{customer.state}}</p>
 
         <button class="buttonStyle" (click)="onViewDetail()"> View Detail</button>
+        <button type="button" >Add to parent's list</button>
     </div>
 
 </div>
